# kakarot-rpc-sandbox

./: .env.example  .gitignore  README.md  pyproject.toml
ethjsonrpc/: .env.example  constants.py  erc20.json  eth_client.py  kakarot.json  main.py  utils.py
